# quads

./: .gitignore  .readthedocs.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  pyproject.toml  quads.py  setup.py
.github/workflows/: python-app.yml
docs/: conf.py  index.rst  tutorial.rst
docs/api/: boundingbox.rst  point.rst  quadnode.rst  quadtree.rst  utils.rst
tests/: test_data.py  test_quads.py
