[tool.poetry]
name = "quads"
version = "1.0.0-beta"
description = "A pure Python Quadtree implementation."
authors = ["Daniel Lindsley <daniel@toastdriven.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/toastdriven/quads"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = "^5.2"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
